<resources>
    <string name="app_name">Etask</string>
    <string name="moto">Make a difference \n Be the difference</string>
    <string name="sk">I am SK</string>
    <string name="participant">I am Participant</string>
    <string name="ok">Ok</string>
    <string name="option">Register as ?</string>
    <string name="reg_Comm">Community Identity</string>
    <string name="comm_name">Name of community</string>
    <string name="code">Entry Id</string>
    <string name="comm_ad">Address</string>
    <string name="phone">Phone</string>
    <string name="next">Next</string>
    <string name="to_signUp">Proceed to Sign up . .</string>
    <string name="account">Create Account</string>
    <string name="name">Username</string>
    <string name="email_login">Email</string>
    <string name="pass">Password</string>
    <string name="conf_pass">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="title_activity_nav_home">NavHome</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="coins">coins</string>
    <string name="desc">Description</string>
    <string name="title">Title</string>
    <string name="post">Post</string>
    <string name="update">Update</string>
    <string name="email">Email Address</string>
    <string name="log_out">Logout</string>
    <string name="acc" />
    <string name="default_web_client_id1" translatable="false">802469076637-9deog06noph6sblug6rm0gfsjonr0dcj.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation_home">NavigationHome</string>
    <string name="account_exist">Already have an account ?</string>
    <string name="new_account">Create new account ?</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>

    <!--    for generating qr-->
    <string name="qr_code">qr_code</string>
    <string name="enter_your_info">Enter your info</string>
    <string name="generate_qr_code">Generate QR Code</string>

</resources>