<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".UserSignup"
    android:background="@drawable/bg"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        android:layout_marginTop="30dp"
        app:cardBackgroundColor="@color/satin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:fontFamily="@font/abeezee"
                android:textSize="25sp"
                android:layout_weight="1"
                android:text="@string/account" />

            <View
                android:layout_width="150dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:background="#9bae57"
                android:layout_marginTop="10dp"/>


            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/sk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/abeezee"
                    android:text="Leader" />

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"/>

                <RadioButton
                    android:id="@+id/participant"
                    android:layout_width="match_parent"
                    android:fontFamily="@font/abeezee"
                    android:layout_height="wrap_content"
                    android:text = "Participant" />

            </RadioGroup>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:hint="Firstname">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTxt_fName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/abeezee"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:hint="Lastname">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTxt_lName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/abeezee"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:hint="@string/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTxt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/abeezee"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                app:passwordToggleEnabled="true"
                android:hint="@string/pass">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTxt_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/abeezee"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                app:passwordToggleEnabled="true"
                android:hint="@string/conf_pass">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTxt_confPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/abeezee"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/signUp_btn"
                android:layout_width="200dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/sign_up"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:text="@string/account_exist"/>

            <Button
                android:id="@+id/login_btn"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/grayscale"
                android:layout_weight="1"
                android:text="@string/login" />

            <TextView
                android:id="@+id/notify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="end"
                android:textSize="13sp"
                android:text="" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>