<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".AddTaskActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

        <ImageButton
            android:id="@+id/imageBtn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="?attr/colorPrimary"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24" />


    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ADD TASK"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:fontFamily="@font/abeezee"
                android:textSize="22sp"
                android:inputType="textCapCharacters"
                android:layout_gravity="center"/>
            <View
                android:layout_width="200dp"
                android:layout_height="2dp"
                android:background="#9bae57"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                />

            <EditText
                android:id="@+id/editTxt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:textAlignment="center"
                android:fontFamily="@font/abeezee"
                android:layout_weight="1"
                android:maxLength="25"
                android:inputType="textCapCharacters"
                android:hint="@string/title"/>

            <EditText
                android:id="@+id/editTxt_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_weight="1"
                android:fontFamily="@font/abeezee"
                android:maxLength="100"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/desc"
                android:inputType="textMultiLine"/>


            <EditText
                android:id="@+id/editTxt_points"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/abeezee"
                android:layout_weight="1"
                android:ems="10"
                android:maxLength="5"
                android:hint="@string/coins"
                android:inputType="number" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Due Date"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:fontFamily="@font/abeezee"
                android:textSize="17sp"
                android:inputType="textCapCharacters"
                />


            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:background="@android:drawable/ic_menu_recent_history"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/time_picker"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:onClick="ClickTime"
                    android:layout_marginEnd="30dp"
                    android:fontFamily="@font/abeezee"
                    android:cursorVisible="false"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="Time"/>



                <ImageView
                    android:background="@android:drawable/ic_menu_my_calendar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/date_picker"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:fontFamily="@font/abeezee"
                    android:onClick="ClickDate"
                    android:textSize="15sp"
                    android:textAlignment="center"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="Date" />


            </LinearLayout>

            <TextView
                android:id="@+id/file"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />



            <com.google.android.material.button.MaterialButton
                android:id="@+id/create_btn"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:layout_marginStart="50dp"
                android:textSize="20sp"
                android:fontFamily="@font/abeezee"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="20dp"
                app:elevation="@dimen/cardview_compat_inset_shadow"
                app:cornerRadius="40dp"
                android:text="@string/post" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>